# Labs

./: README.md
Lab3(4)/: BinarySearchTree.h  BinarySearchЕree.h  CMakeLists.txt  Queue.h  Tests.cpp  main.cpp
lab1/: CMakeLists.txt  Info-numbers.c  Info-numbers.h  Polinom.c  Polinom.h  main.c  test  test.c
lab1/Tests/: test_complex.c  test_float.c  test_int.c
lab1/Types/: Complex.c  Complex.h  Int.c  Int.h  Real.c  Real.h
lab2/: ArraySecuence.h  CMakeLists.txt  Complex.h  DynamicArray.h  LinkedList.h  LinkedListSecuence.h  Secuence.cpp  Secuence.h  Vector.h  main.cpp
lab2/Tests/: Tests for Secuence.cpp  TestsSecuence.cpp  TestsVector.cpp
